src/objects/Account_Characteristic__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract ID</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account Characteristics</relationshipLabel>
        <relationshipName>Account_Characteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Account Characteristics</relationshipLabel>
        <relationshipName>Account_Characteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FWV</fullName>
                </value>
                <value>
                    <fullName>CWT</fullName>
                </value>
                <value>
                    <fullName>Non-Disconnectable</fullName>
                </value>
                <value>
                    <fullName>Zero-Rated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Characteristic</label>
    <nameField>
        <displayFormat>ACCTCHR-{00000}</displayFormat>
        <label>Account Characteristic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Characteristics</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CXE_ContractAndServiceBothFilledUp</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Contract_ID__c)),NOT(ISBLANK(Service__c)))</errorConditionFormula>
        <errorMessage>You cannot have values on both Contract ID and Service at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_ZeroRatedForServiceOnly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Contract_ID__c)),ISBLANK( Service__c ),  ISPICKVAL( Type__c , &quot;Zero-Rated&quot;))</errorConditionFormula>
        <errorMessage>&quot;Zero-Rated&quot; type is for Account Characteristics related to Service only.</errorMessage>
    </validationRules>
</CustomObject>